@@ -1,3 +1,14 @@
+2012-05-09  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tkInt.decls:   Change XFillRectangle(s)/XDrawLines(s) signature
+	* generic/tkIntXlibDeclsDecls.h: to match Xorg, needed for Cygwin.
+	* xlib/xdraw.c:
+	* mac/tkMacDraw.c:
+	* macosx/tkMacOSXDraw.c:
+	* win/tkWinDraw.c:
+	* win/Makefile.in:       Generate same pkgIndex.tcl file for win32 and
+	* unix/Makefile.in:      cygwin, one that is equally useable for both.
+
 2012-05-25  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tkWindow.c:    Simpify determination whether we are running on cygwin.
